2013-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/doc/asmlnk.txt: updated for all steps towards ASxxxx v5
	* sdas/doc/asxhtm.html: removed
	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.3.0

2013-05-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix endianness in stack / stack copy.

2013-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix multibyte false Ifx.

2013-05-07 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: removed dedication to Dennis M. Ritchie,
	  corrected ChangeLog path

2013-05-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix endianness in register / stack copy.

2013-05-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.3.0 rc1
	* sdcc.spec: version 3.3.0
	* sdas/asxxsrc/asout.c: suppress warning

2013-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix stack variable offset.

2013-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More accurately model behaviour of xor for peepholes.
	* sdas/asstm8/stm8mch.c,
	  sdas/asxxsrc/asout.c:
	  Applied patch from Valentin Dudouyt to make range check stm8-specific.

2013-05-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Fix generation of extra # in peephole.

2013-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix memory leak in conditional jump.

2013-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20000314-3.c:
	  STM8: Removed regression test, since it tests for non-standard gcc behaviour.
	* src/stm8/gen.c:
	  STM8: Fix saving of a on stack in binary complement.

2013-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/main.c,
	  src/stm8/ralloc2.cc:
	  STM8: Implement unsigned division.

2013-04-30 Philipp Klaus Krause <pkk AT spth.de>
