@@ -2,10 +2,14 @@
 
    //virtual void incx(void);
    virtual int fetchea(t_mem code, unsigned char prefix);
+   virtual int fetch_sp_indexed2();
+   virtual int fetch_long2();
    virtual int get_dest(t_mem code, unsigned char prefix);
+   virtual int operandw(t_mem code, unsigned char prefix);
    
    virtual int inst_adc(t_mem code, unsigned char prefix);
    virtual int inst_add(t_mem code, unsigned char prefix);
+   virtual int inst_addw(t_mem code, unsigned char prefix);
    virtual int inst_and(t_mem code, unsigned char prefix);
    virtual int inst_bccmbcpl(t_mem code, unsigned char prefix);
    virtual int inst_bcp(t_mem code, unsigned char prefix);
