@@ -1,3 +1,12 @@
+2013-05-11 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sim/ucsim/stm8.src/inst.cc,
+	  sim/ucsim/stm8.src/instcl.h,
+	  sim/ucsim/stm8.src/stm8.cc,
+	  sim/ucsim/stm8.src/stm8mac.h,
+	  support/regression/ports/stm8/support.c:
+	  STM8: Patches by Valentin Dudouyt: The last bits to enable regression testing.
+
 2013-05-10 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdas/doc/asmlnk.txt: updated for all steps towards ASxxxx v5
